@@ -89,8 +89,11 @@ TCP
   @octave_tcp/fwrite
   @octave_tcp/flushinput
   @octave_tcp/flushoutput
+  @octave_tcp/flush
   @octave_tcp/get
   @octave_tcp/set
+  @octave_tcp/read
+  @octave_tcp/write
   tcp_read
   tcp_write
   tcp_timeout
