@@ -3,7 +3,10 @@ Summary of important user-visible changes for instrument-control 0.5.0+
 
   ** SPI: added new spi object and functions
 
-  ** TCP: added tcpclient, depeciated tcpip
+  ** TCP: 
+    added tcpclient, depeciated tcpip
+
+    added methods flush, read, write
 
 Summary of important user-visible changes for instrument-control 0.5.0
 -------------------------------------------------------------------
